--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
     "node-random-name": "^1.0.1",
+    "prettyjson": "^1.2.1",
+    "prompt": "^1.0.0",
+    "random-name": "^0.1.2",
     "randomstring": "^1.1.5"
   }
 }
