--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "gaussian": "^1.1.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "lodash": "^4.17.11",
+    "lodash.clonedeep": "^4.5.0",
     "morgan": "~1.9.0",
     "node-random-name": "^1.0.1",
     "prettyjson": "^1.2.1",
