--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bluebird": "^3.5.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "enigma.js": "^2.3.0",
     "express": "~4.16.0",
     "gaussian": "^1.1.0",
+    "halyard.js": "^1.3.2",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "lodash": "^4.17.11",
@@ -19,6 +22,7 @@
     "prettyjson": "^1.2.1",
     "prompt": "^1.0.0",
     "random-name": "^0.1.2",
-    "randomstring": "^1.1.5"
+    "randomstring": "^1.1.5",
+    "ws": "^6.1.0"
   }
 }
