--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "server" : "node ./server/bin/www",
+    "server": "node ./server/bin/www",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -21,11 +21,11 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.2.0",
-    "zone.js": "~0.8.26",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "bluebird": "^3.5.2",
+    "bootstrap": "^3.3.7",
     "cookie-parser": "~1.4.3",
+    "core-js": "^2.5.4",
     "debug": "~2.6.9",
     "enigma.js": "^2.3.0",
     "express": "~4.16.0",
@@ -33,6 +33,7 @@
     "halyard.js": "^1.3.2",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "morgan": "~1.9.0",
@@ -42,7 +43,9 @@
     "prompt": "^1.0.0",
     "random-name": "^0.1.2",
     "randomstring": "^1.1.5",
-    "ws": "^6.1.0"
+    "rxjs": "~6.2.0",
+    "ws": "^6.1.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.8.0",
