--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "morgan": "~1.9.0",
+    "ngx-restangular": "^3.0.0",
     "node-random-name": "^1.0.1",
     "picasso.js": "^0.15.0",
     "prettyjson": "^1.2.1",
@@ -44,6 +45,7 @@
     "random-name": "^0.1.2",
     "randomstring": "^1.1.5",
     "rxjs": "~6.2.0",
+    "rxjs-compat": "^6.3.3",
     "ws": "^6.1.0",
     "zone.js": "~0.8.26"
   },
