Hiring process and notification

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "@angular/router": "^6.1.0",
     "@ng-bootstrap/ng-bootstrap": "^4.0.0",
     "@types/highcharts": "^5.0.33",
+    "@types/jquery": "^3.3.22",
     "angular-highcharts": "^6.2.6",
+    "angular-notifier": "^4.1.1",
     "async": "^2.6.1",
     "bluebird": "^3.5.2",
     "bootstrap": "^3.3.7",
