--- a/angular.json
+++ b/angular.json
@@ -25,6 +25,13 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.css",
+              "node_modules/angular-notifier/styles/themes/theme-material.css",
+              "node_modules/angular-notifier/styles/types/type-default.css",
+              "node_modules/angular-notifier/styles/types/type-error.css",
+              "node_modules/angular-notifier/styles/types/type-info.css",
+              "node_modules/angular-notifier/styles/types/type-success.css",
+              "node_modules/angular-notifier/styles/types/type-warning.css",
+              "node_modules/angular-notifier/styles/core.css",
               "src/TemplateAssets/css/animate.min.css",
               "src/TemplateAssets/css/paper-dashboard.css",
               "src/TemplateAssets/css/demo.css",
@@ -34,9 +41,7 @@
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.min.js",
               "src/TemplateAssets/js/bootstrap-checkbox-radio.js",
-              "src/TemplateAssets/js/bootstrap-notify.js",
-              "src/TemplateAssets/js/paper-dashboard.js",
-              "src/TemplateAssets/js/demo.js"
+              "src/TemplateAssets/js/paper-dashboard.js"
             ]
           },
           "configurations": {
