QIX user custom property

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "morgan": "~1.9.0",
+    "mysql": "^2.16.0",
     "ngx-cookie-service": "^2.0.0",
     "ngx-restangular": "^3.0.0",
     "ngx-smart-modal": "^7.1.0",
@@ -53,6 +54,7 @@
     "prompt": "^1.0.0",
     "random-name": "^0.1.2",
     "randomstring": "^1.1.5",
+    "request": "^2.88.0",
     "rxjs": "~6.2.0",
     "rxjs-compat": "^6.3.3",
     "websocket": "^1.0.28",
