--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node ./server/bin/www",
     "server": "node ./server/bin/www",
     "build": "ng build",
     "test": "ng test",
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@microsoft/microsoft-graph-client": "^1.3.0",
     "@types/highcharts": "^5.0.33",
     "@types/jquery": "^3.3.22",
     "angular-highcharts": "^6.2.6",
@@ -41,24 +42,29 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
     "lodash": "^4.17.11",
     "lodash.clonedeep": "^4.5.0",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
-    "ngx-cookie-service": "^2.0.0",
+    "ngx-cookie-service": "^2.1.0",
     "ngx-restangular": "^3.0.0",
     "ngx-smart-modal": "^7.1.0",
+    "ngx-spinner": "^7.0.0",
     "node-random-name": "^1.0.1",
+    "oauth": "^0.9.15",
+    "passport": "^0.4.0",
     "picasso.js": "^0.15.0",
     "prettyjson": "^1.2.1",
     "prompt": "^1.0.0",
     "random-name": "^0.1.2",
     "randomstring": "^1.1.5",
     "request": "^2.88.0",
-    "rxjs": "~6.2.0",
+    "restangular": "^1.6.1",
+    "rxjs": "^6.2.2",
     "rxjs-compat": "^6.3.3",
     "websocket": "^1.0.28",
-    "ws": "^6.1.0",
+    "ws": "^6.1.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
